[tool.poetry]
name = "nonebot_plugin_group_event"
version = "0.0.1"
description = "NoneBot2插件，群聊事件交互"
authors = ["Agnes_Digital <Z735803792@163.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/Agnes4m/nonebot_plugin_group_event"
repository = "https://github.com/Agnes4m/nonebot_plugin_group_event"
keywords = ["game", "nonebot2", "plugin","bilibili"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
]
include = [
    "LICENSE","README.md"
]

[tool.poetry.dependencies]
python = "^3.9"
nonebot2 = "^2.0.0"
nonebot-adapter-onebot = ">=2.2.1"
"ruamel.yaml" = "^0.17.21"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
